# project-odyssey-algo

./: .env.example  .gitignore  CODE_REVIEW.md  DOCUMENTATION_SUMMARY.md  PHASE1.md  QUICKSTART.md  README.md  UPSTOX_WEBSOCKET_FLOWCHART.md  pyproject.toml  requirements.txt  setup.sh
diagrams/: complete_flow.mmd  component_interaction.mmd  message_processing.mmd  state_transitions.mmd
examples/: basic_usage.py
phase1/: .env.example  .gitignore  BUILD_SUMMARY.md  COMPLETION_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  main.py  requirements.txt  start.sh  stop.sh
phase1/api/: __init__.py  routes.py
phase1/app/: models.py
phase1/broker/: __init__.py  instrument_manager.py  upstox_client.py  websocket_client.py
phase1/config/: __init__.py  settings.py
phase1/database/: __init__.py  models.py  repository.py  session.py
phase1/market_data/: __init__.py  candle_builder.py  tick_processor.py
phase1/scheduler/: __init__.py  jobs.py
phase1/tests/: conftest.py  test_candles.py  test_instruments.py  test_repository.py  test_routes.py
scripts/: debug_streamer.py
src/odyssey_algo/: __init__.py  candle.py  cli.py  handler.py  instruments.py  logging_setup.py  settings.py  storage.py
src/odyssey_algo/streaming/: __init__.py  aggregator.py  atm.py  cli.py  schema.sql  service.py  settings.py  store.py  tick.py
src/odyssey_algo/trading/: __init__.py  cli.py  engine.py  journal.py  market_data.py  market_hours.py  models.py  nifty_instruments.py  settings.py  upstox_rest.py
src/odyssey_algo/trading/orders/: __init__.py  broker.py  manager.py
tests/: conftest.py  test_candle.py  test_market_hours.py  test_risk_and_broker.py  test_storage.py  test_strategy.py  test_streaming.py  test_trading_models.py
(+4 files in other folders)
