[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odyssey-algo"
version = "0.2.0"
description = "Production-grade NIFTY options algorithmic trading system on Upstox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "upstox-python-sdk>=2.0.0",
    "websocket-client>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
odyssey-stream = "odyssey_algo.cli:main"
odyssey-trade = "odyssey_algo.trading.cli:main"
odyssey-nifty-stream = "odyssey_algo.streaming.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
